# matematika.rs

./: CONTRIBUTING.md  Cargo.toml  DOKUMENTASI.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
dokumentas/: Basis.md
dokumentasi/: Aljabar.md  Basis.md  Geometri.md  Kombinatorika.md
example/: main.rs
src/: lib.rs  main.rs
src/kalkulus/: integral.rs
src/operasi/: aritmetika.rs  kombinatorika.rs  mod.rs  statistika.rs
src/sistem/: aljabar.rs  basis.rs  bilangan.rs  fibonacci.rs  geometri.rs  kelipatan.rs  mod.rs
