[package]
name = "matematika-rs"
version = "0.0.8"
authors = ["LordPaijo (Iyan) <iyanmaumakan.56@gmail.com>"]
edition = "2021"
description = "Library matematika sederhana untuk orang malas seperti saya."
license = "MIT"
repository = "https://github.com/lordpaijo/matematika.rs"
documentation = "https://docs.rs/matematika-rs"

[dependencies]
